# beine_gazebo_plugins

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test.yml  deploy-debian.yml
include/beine_gazebo_plugins/: legs_plugin.hpp  status_plugin.hpp
src/: legs_plugin.cpp  status_plugin.cpp
